web/src/css/box.css
.box {
  border-radius: 1em;
  /* @apply rounded-full; */
  background: #ffffff;
  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.4);
  will-change: box-shadow;
  /* transition: box-shadow 5s linear; */
  transition: all 0.25s !important;
}

.box:hover {
  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
}

.box:hover button {
  color: #ccc;
  background-color: #ffffff;
  @apply rounded-md;
}

.box-circle {
  width: 40%;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
}

.box-circle .square {
  /* backdrop-filter: blur(10px); */
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
  cursor: pointer;

  /* transition: 0.5s all; */
}

.box-circle .background-circle {
  padding-bottom: 100%;
  background: rgba(255, 255, 255, 1);
  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.8);
  border-radius: 9999px;
  @apply animate-pulse;
  transition: 0.25s box-shadow;
  transition-property: box-shadow, background-color;
}

.box-circle:hover .background-circle {
  background: rgba(255, 255, 255, 1);
  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.8);
  /* backdrop-filter: blur(10px); */
}

.box-link {
  @apply inline-block;
  @apply uppercase;
  @apply text-sm;
  @apply relative;
  @apply py-1 px-2;
  z-index: 1;
  box-shadow: none;
  outline: none !important;
}

.box.box-black {
  @apply bg-black;
  color: #ffffff;
}

.box-link img {
  width: auto;
  @apply block;
  height: 0.375em;
  @apply relative;
}

.box-link:before {
  content: "";
  z-index: -1;
  @apply absolute py-1/4em w-full bg-white rounded-full h-full left-0 block top-1/2 transform -translate-y-1/2;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
  will-change: box-shadow;
  transition: 1s box-shadow;
}

.box.accordion button[aria-expanded="true"] {
  color: #000000 !important;
}

@screen md {
  .box {
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
  }
  .box-link img {
    height: 0.675em;
  }
  .box-link {
    @apply py-2 px-1/4em;
  }
  .box-circle .background-circle {
    box-shadow: 0px 1px 11px rgba(0, 0, 0, 0.6);
  }
  .box-circle * {
    @apply text-nav;
  }
  .box-link:before {
    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.6);
  }
  .box-link:hover:before {
    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
  }
  .box-link img {
    height: 0.675em;
  }
}

